[gd_scene load_steps=18 format=3 uid="uid://4jm41curqcp0"]

[ext_resource type="Script" path="res://Scripts/Objects/player.gd" id="1_lvxql"]
[ext_resource type="Shader" path="res://Resources/Shaders/rainbow.gdshader" id="2_mtxgr"]
[ext_resource type="Texture2D" uid="uid://xn8eq6mhn8o" path="res://Sprites/DinoWalk.png" id="2_u18lu"]
[ext_resource type="Texture2D" uid="uid://dk45kwc4vbwtv" path="res://Sprites/UI/SliderGrabber.png" id="3_htgs8"]
[ext_resource type="Texture2D" uid="uid://bndt2l82maxqq" path="res://Sprites/DinoDuck.png" id="3_lhtuh"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v78a1"]
shader = ExtResource("2_mtxgr")
shader_parameter/no_col = 3
shader_parameter/color_1 = Vector3(0, 0, 1)
shader_parameter/color_2 = Vector3(0, 1, 0)
shader_parameter/color_3 = Vector3(1, 0, 0)
shader_parameter/color_4 = Vector3(1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_iah6n"]

[sub_resource type="AtlasTexture" id="AtlasTexture_l0kw8"]
atlas = ExtResource("2_u18lu")
region = Rect2(352, 0, 88, 94)

[sub_resource type="AtlasTexture" id="AtlasTexture_165u1"]
atlas = ExtResource("3_lhtuh")
region = Rect2(0, 0, 118, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_ll48b"]
atlas = ExtResource("3_lhtuh")
region = Rect2(118, 0, 118, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_ls1us"]
atlas = ExtResource("2_u18lu")
region = Rect2(0, 0, 88, 94)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqvnm"]
atlas = ExtResource("2_u18lu")
region = Rect2(176, 0, 88, 94)

[sub_resource type="AtlasTexture" id="AtlasTexture_cg5ih"]
atlas = ExtResource("2_u18lu")
region = Rect2(264, 0, 88, 94)

[sub_resource type="SpriteFrames" id="SpriteFrames_nsgoo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0kw8")
}],
"loop": true,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_165u1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ll48b")
}],
"loop": true,
"name": &"duck",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ls1us")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqvnm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cg5ih")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_otdct"]
size = Vector2(52, 86)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l5ec0"]
size = Vector2(31, 20.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qwlbn"]
size = Vector2(110, 52)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_lvxql")
rainbow_shader = ExtResource("2_mtxgr")

[node name="Invincibility" type="TextureProgressBar" parent="."]
material = SubResource("ShaderMaterial_v78a1")
offset_left = 64.0
offset_top = -69.0
offset_right = 192.0
offset_bottom = 59.0
rotation = 1.5708
max_value = 300.0
fill_mode = 8
nine_patch_stretch = true
texture_progress = ExtResource("3_htgs8")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_iah6n")
sprite_frames = SubResource("SpriteFrames_nsgoo")
animation = &"run"
autoplay = "run"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-6, 1)
shape = SubResource("RectangleShape2D_otdct")

[node name="Hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="Stand" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(6, 1)
shape = SubResource("RectangleShape2D_otdct")

[node name="StandHead" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(23.5, -31.25)
shape = SubResource("RectangleShape2D_l5ec0")

[node name="Duck" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 18)
shape = SubResource("RectangleShape2D_qwlbn")
disabled = true

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(0, -1)
target_position = Vector2(0, 57)
hit_from_inside = true
collide_with_areas = true

[node name="Tolerance" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="Tolerance" to="." method="_on_tolerance_timeout"]
